Alineado de portafolio y social container

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 <!--Contenedor redes sociales-->
                 <div class="social-container">
                     <a href="" class="social-icon">
-                        <img  src="./assets/img/iconos/linkedin.svg" alt="">
+                        <img class="img-icon" src="./assets/img/iconos/linkedin.svg" alt="">
                     </a>
                     <a href="" class="social-icon">
-                        <img  src="./assets/img/iconos/instagram.svg" alt="">
+                        <img class="img-icon"  src="./assets/img/iconos/instagram.svg" alt="">
                     </a>
                     <a href="" class="social-icon">
-                        <img src="./assets/img/iconos/twitter.svg" alt="">
+                        <img class="img-icon" src="./assets/img/iconos/twitter.svg" alt="">
                     </a>
                 </div>
 
