Acomodo grid portafolio

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
            <section class="main-portafolio" id="port">
                 <h1>Mi portafolio</h1>
                 <div class="portafolio" >
-                    <img class="img-port" src="./assets/img/Logos- Imágenes/ejemplo1.jpg" alt="" class="emeplo">
-                    <img class="img-port" src="./assets/img/Logos- Imágenes/ejemplo2.jpg" alt="" class="emeplo">
-                    <img class="img-port" src="./assets/img/Logos- Imágenes/ejemplo3.jpg" alt="" class="emeplo">
-                    <img class="img-port" src="./assets/img/Logos- Imágenes/ejemplo5.jpg" alt="" class="emeplo">
+                    <img class="img-port uno" src="./assets/img/Logos- Imágenes/ejemplo1.jpg" alt="" >
+                    <img class="img-port dos" src="./assets/img/Logos- Imágenes/ejemplo2.jpg" alt="" >
+                    <img class="img-port tres" src="./assets/img/Logos- Imágenes/ejemplo3.jpg" alt="" >
+                    <img class="img-port cuatro" src="./assets/img/Logos- Imágenes/ejemplo5.jpg" alt="" >
                 </div>
             </section>
 
