Agregar porcentajes habilidades

--- a/index.html
+++ b/index.html
@@ -112,39 +112,39 @@
                     </div>          
                 </section>
      <!-- Seccion de habilidades-->  
-            <section class="main-habilitis" id="skills">
-                <h1>Mis habilidades</h1>
-                <div class="habilidades">
-                   <h5>Ingles</h5> 
-                   <div class="barra">
-                    <div class="progreso" style=" --w:72%"></div>
-                   </div>
-                </div>
-                <div class="habilidades">
-                    <h5>CSS</h5>
-                    <div class="barra">
-                        <div class="progreso" style="--w:40%" ></div>
-                    </div>
-                </div>
-                <div class="habilidades">
-                    <h5>HTML</h5>
-                    <div class="barra">
-                        <div class="progreso" style="--w:60%" ></div>
-                    </div>
-                </div>
-                <div class="habilidades">
-                    <h5>JS</h5>
-                    <div class="barra">
-                        <div class="progreso" style="--w:40%" ></div>
-                    </div>
-                </div>
-                <div class="habilidades">
-                    <h5>React</h5>
-                    <div class="barra">
-                        <div class="progreso" style="--w:10%" ></div>
-                    </div>
-                </div>
-            </section>
+     <section class="main-habilitis" id="skills">
+        <h1>Mis habilidades</h1>
+        <div class="habilidades">
+           <h5>Ingles <p id="porcentaje">72%</p></h5> 
+           <div class="barra">
+            <div class="progreso" style=" --w:72%"></div>
+           </div>
+        </div>
+        <div class="habilidades">
+            <h5>CSS  <p id="porcentaje">40%</p></h5>
+            <div class="barra">
+                <div class="progreso" style="--w:40%" ></div>
+            </div>
+        </div>
+        <div class="habilidades">
+            <h5>HTML  <p id="porcentaje">60%</p></h5>
+            <div class="barra">
+                <div class="progreso" style="--w:60%" ></div>
+            </div>
+        </div>
+        <div class="habilidades">
+            <h5>JS  <p id="porcentaje">40%</p></h5>
+            <div class="barra">
+                <div class="progreso" style="--w:40%" ></div>
+            </div>
+        </div>
+        <div class="habilidades">
+            <h5>React  <p id="porcentaje">10%</p></h5>
+            <div class="barra">
+                <div class="progreso" style="--w:10%" ></div>
+            </div>
+        </div>
+    </section>
 
            <section class="main-portafolio" id="port">
                 <h1>Mi portafolio</h1>
